# LightSwitch

./: .gitignore  README.md  pyproject.toml
lightswitch/: __init__.py  errors.py  memory.py  model.py  vram.py
tests/: test_memory.py  test_model.py  test_vram.py
