[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lightswitch"
version = "0.1.0"
description = "Framework-agnostic AI model loading and VRAM management utilities."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "LightSwitch contributors" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

