[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lightswitch"
version = "0.2.0"
description = "Framework-agnostic AI model loading and memory management utilities."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "LightSwitch contributors" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["psutil>=5.9"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
